Closed
Bug 257738
Opened 21 years ago
Closed 21 years ago
[ATK] Following hyperlinks with GOK UI-Grab fails to auto-update the GOK.
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: Louie.Zhao, Assigned: Louie.Zhao)
References
Details
(Keywords: access)
Attachments
(1 file)
|
2.89 KB,
patch
|
pkwarren
:
review+
bryner
:
superreview+
|
Details | Diff | Splinter Review |
Steps to Reproduce:
1. Start Mozilla and GOK.
2. Go to www.sun.com.
3. Click UI Grab in GOK main window.
4. Click one hyperlink in GOK window.
After mozilla loads a new webpage, GOK UI-Grab should update itself to reflect
the change.
| Assignee | ||
Comment 1•21 years ago
|
||
Comment 2•21 years ago
|
||
Louie, did you mean to flag this for review?
| Assignee | ||
Updated•21 years ago
|
Attachment #157690 -
Flags: review?(pkwarren)
Comment 3•21 years ago
|
||
Comment on attachment 157690 [details] [diff] [review]
patch v1
I have tested this and it is working well.
Attachment #157690 -
Flags: review?(pkwarren) → review+
Updated•21 years ago
|
Attachment #157690 -
Flags: superreview?(bryner)
Updated•21 years ago
|
Attachment #157690 -
Flags: superreview?(bryner) → superreview+
Comment 4•21 years ago
|
||
Patch checked in.
Checking in src/atk/nsDocAccessibleWrap.cpp;
/cvsroot/mozilla/accessible/src/atk/nsDocAccessibleWrap.cpp,v <--
nsDocAccessibleWrap.cpp
new revision: 1.15; previous revision: 1.14
done
Checking in src/base/nsRootAccessible.cpp;
/cvsroot/mozilla/accessible/src/base/nsRootAccessible.cpp,v <--
nsRootAccessible.cpp
new revision: 1.100; previous revision: 1.99
done
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•