Bug 257738 - [ATK] Following hyperlinks with GOK UI-Grab fails to auto-update the GOK. Patch contributed by Louie Zhao (louie.zhao@sun.com) r=pkwarren@gmail.com, sr=bryner@brianryner.com